<resources>
    <string name="app_name">Uber</string>
    <string name="navigation_map">Map</string>
    <string name="navigation_inbox">Inbox</string>
    <string name="navigation_account">Account</string>
    <string name="navigation_history">History</string>
    <string name="welcome">Welcome to Uber</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="login_image">Login image</string>
    <string name="input_email">Email</string>
    <string name="password">Password</string>
    <string name="back_arrow">Back arrow</string>
    <string name="registration_image">Registration image</string>
    <string name="sign_up">Sign up</string>
    <string name="input_name">Name</string>
    <string name="surname">Surname</string>
    <string name="input_address">Address</string>
    <string name="phone">Phone</string>
    <string name="joined_us_before">Joined us before?</string>
    <string name="repeat_password">Repeat password</string>
    <string name="return_to_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Imenko Prezimic</string>
    <string name="phoneNumber">+38766824994</string>
    <string name="email">kvucic6@gmail.com</string>
    <string name="address">Neka adresa 55 Novi Sad</string>
    <string name="favorite_routes">Favorite Routes</string>
    <string name="reports">Reports</string>
    <string name="profile_picture">Profile picture</string>
    <string name="history_of_routes">History of routes</string>
    <string name="visa_card">Visa Card</string>
    <string name="card_number">566-788-965789</string>
    <string name="enter_amount">Enter amount</string>
    <string name="confirm">Confirm</string>
    <string name="currentAmount">Current amount</string>
    <string name="amount">456786</string>
    <string name="ride_history_title">Ride History</string>
    <string name="title_activity_about_ride">AboutRideActivity</string>
    <string name="excellent">Excellent</string>
    <string name="very_good">Very good</string>
    <string name="good">Good</string>
    <string name="disappointing">Disappointing</string>
    <string name="very_disappointing">Very disappointing</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="support">SUPPORT</string>
    <string name="panic">PANIC</string>
    <string name="credit_card">Credit Card</string>
    <string name="imenko">Imenko</string>
    <string name="prezimic">Prezimic</string>
    <string name="lozinka">lozinka</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="account_information">Account Info</string>
    <string name="choose_start_date">Choose start date</string>
    <string name="choose_end_date">Choose end date</string>
    <string name="choose_report_type">Choose type of report</string>
    <string name="text_reset_password">Don\'t worry! It happens. Please enter the address associated with your account.</string>
    <string name="submit">SUBMIT</string>
    <string name="remember_password">Remember password?</string>
    <string name="save">SAVE</string>
    <string name="reset_password">Reset password</string>
    <string name="new_password">New password</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="inbox">INBOX</string>
    <string name="enter_message">Type a message…</string>
    <string name="send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="two_fav_rout">2 favorite routes</string>
    <string name="three_types_of_reports">Choose date range</string>
    <string name="open_log_in_page">Open log in page</string>
    <string name="delimiter">-</string>
    <string name="some_text">xxxx</string>
    <string name="order_ride">Order a ride</string>
    <string name="remove">Remove</string>
    <string name="activity">Activity Status</string>
    <string name="statistics">Statistics</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="declined_drives">Declined drives:</string>
    <string name="accepted_drives">Accepted drives:</string>
    <string name="hours">Working hours:</string>
    <string name="earnings">Earnings:</string>
    <string name="leave_your_review">Leave your review!</string>
    <string name="rate_the_driver">Rate the driver</string>
    <string name="rate_the_car">Rate the car</string>
    <string name="not_a_favorite">NOT A FAVORITE</string>
    <string name="no">No</string>
    <string name="sure">Sure</string>
    <string name="location_disabled_message">Location is disabled</string>
    <string name="oops">Enable your location</string>
    <string name="input_departure">Add a pickup location</string>
    <string name="input_destination">Enter your destination</string>
    <string name="new_passenger">Add other passengers by email</string>
    <string name="add">Add</string>
    <string name="add_favorites">Add to favorites</string>
    <string name="set_marker">set marker</string>
    <string name="create_ride_title1">Order your ride!</string>
    <string name="create_ride_title2">Few more steps…</string>
    <string name="create_ride_title3">Ready to go!</string>
    <string name="order">Order</string>
    <string name="order_time">Order time: now</string>
    <string name="cancel_order">Cancel order</string>
    <string name="passengers">Passengers</string>
    <string name="start_date">Start date</string>
    <string name="start_date_content">11.11.2022.</string>
    <string name="estimated_time">Estimated time</string>
    <string name="estimated_time_content">20 min</string>
    <string name="price">Price</string>
    <string name="price_content">320 RSD</string>
    <string name="pet_transport">Pet transport</string>
    <string name="baby_transport">Baby transport</string>
    <string name="yes">Yes</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="standard">STANDARD</string>
    <string name="check_favorite_locations">Check your favorite locations</string>
    <string name="view_account_data">View and edit your account data</string>
    <string name="view_reports">View your ride reports</string>
    <string name="verification_code">Verification code</string>
    <string name="activation">Please visit your email address to activate your account!</string>
    <string name="average">Average number:</string>
    <string name="total">Total number:</string>
</resources>