<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_map"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="@string/navigation_map"/>
    <item
        android:id="@+id/page_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/navigation_history"/>
    <item
        android:id="@+id/page_inbox"
        android:enabled="true"
        android:icon="@drawable/ic_inbox"
        android:title="@string/navigation_inbox"/>
    <item
        android:id="@+id/page_account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/navigation_account"/>
</menu>