<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25sp"
    tools:context=".PassengerActivities.PassengerRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="start"
                android:contentDescription="@string/back_arrow"
                app:srcCompat="@drawable/ic_arrow" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180sp"
                app:srcCompat="@drawable/register"
                android:contentDescription="@string/registration_image" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:fontFamily="@font/righteous"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="15sp"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="50sp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/txtSecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/surname"
            android:inputType="text"
            android:minHeight="50sp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="50sp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="50sp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:minHeight="50sp"
            android:selectAllOnFocus="true"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:minHeight="50sp" />

        <EditText
            android:id="@+id/phoneReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:hint="@string/phone"
            android:inputType="phone"
            android:minHeight="50sp" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            android:backgroundTint="#96d49c"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/joined_us_before"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/returnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_to_login"
                android:textSize="15sp"
                android:layout_marginStart="10sp"
                android:textStyle="bold"
                android:textColor="#96d49c"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>