<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".UserLoginActivity">

    <LinearLayout
        android:id="@+id/welcomeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5sp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300sp"
            app:srcCompat="@drawable/login"
            android:contentDescription="@string/login_image" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous"
            android:textStyle="bold"
            android:text="@string/welcome"
            android:textColor="?attr/colorSecondary"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="5sp"
            android:autofillHints="emailAddress"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:minHeight="50sp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="50sp"
            android:selectAllOnFocus="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_gravity="end"
            android:text="@string/forgot_password"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/login"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_marginTop="50sp"
                android:layout_marginBottom="10sp"
                android:backgroundTint="?attr/colorPrimary"
                android:gravity="center"
                android:text="@string/login"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="15sp"
                    android:layout_marginStart="10sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorPrimary"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>