<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountInfos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PassengerAccountFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name"
        android:layout_below="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_centerHorizontal="true"
        android:text="@string/name" />

    <TextView
        android:id="@+id/address"
        android:layout_below="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp"
        android:layout_centerHorizontal="true"
        android:text="@string/address"/>

    <TextView
        android:id="@+id/email"
        android:layout_below="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp"
        android:layout_centerHorizontal="true"
        android:text="@string/email" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_below="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp"
        android:layout_centerHorizontal="true"
        android:text="@string/phoneNumber" />


</RelativeLayout>