<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15sp"
    tools:context=".ResetPasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        app:srcCompat="@drawable/lock"
        android:contentDescription="mailbox" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:fontFamily="@font/righteous"
        android:layout_marginTop="25sp"
        android:textSize="50sp"
        android:textColor="?attr/colorSecondary"/>

    <EditText
        android:layout_marginTop="35sp"
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:minHeight="48sp"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:minHeight="48sp"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/save"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="60sp"
        android:layout_marginBottom="10sp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/save"
        android:textStyle="bold" />

</LinearLayout>