<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountOptions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PassengerAccountOptionsFragment"
    android:layout_marginTop="20sp"
    android:layout_centerHorizontal="true">

    <View
        android:id="@+id/line"
        android:layout_width="300sp"
        android:layout_height="1sp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="15sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/firstCardView"
        android:layout_marginStart="20sp"
        android:layout_marginTop="50sp">

        <LinearLayout
            android:id="@+id/firstBtn"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-20sp"
                android:layout_weight="1"
                android:src="@mipmap/star_foreground" />

            <TextView
                android:id="@+id/favoriteRoutesBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-30sp"
                android:text="@string/favorite_routes"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numFavRoutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0sp"
                android:text="@string/two_fav_rout"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173sp"
        android:layout_marginTop="50sp"
        android:id="@+id/secondCard">

        <LinearLayout
            android:id="@+id/secondBtn"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/creditCardPic"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-20sp"
                android:layout_weight="1"
                android:src="@mipmap/credit_card_foreground" />

            <TextView
                android:id="@+id/creditCardBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-30sp"
                android:text="@string/credit_card"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currentAmountTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0sp"
                android:text="@string/visa_card"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200sp"
        android:layout_marginStart="20sp"
        android:id="@+id/thirdCard">

        <LinearLayout
            android:id="@+id/thirdBtn"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/reportsPic"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-20sp"
                android:layout_weight="1"
                android:src="@mipmap/report_foreground" />

            <TextView
                android:id="@+id/reportsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-30sp"
                android:text="@string/reports"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chooseReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0sp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/three_types_of_reports"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200sp"
        android:layout_marginStart="173sp"
        android:id="@+id/fourthCard">

        <LinearLayout
            android:id="@+id/fourthBtn"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/exitPic"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-20sp"
                android:layout_weight="1"
                android:src="@mipmap/exit_foreground" />

            <TextView
                android:id="@+id/exitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-30sp"
                android:text="@string/log_out"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/openLoginPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0sp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/open_log_in_page"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>